HUE-6485 [frontend] Avoid jump on the left assist when opening Hue 4

--- a/desktop/core/src/desktop/static/desktop/less/hue.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue.less
@@ -316,6 +316,13 @@ body {
   .flex(0);
   position: relative;
   background-color: @cui-white;
+}
+
+.left-panel {
+  min-width: 290px;
+}
+
+.right-panel {
   min-width: 250px;
 }
 
